--- a/FI.WebAtividadeEntrevista/packages.config
+++ b/FI.WebAtividadeEntrevista/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
+  <package id="FluentValidation" version="8.6.1" targetFramework="net462" />
+  <package id="FluentValidation.ValidatorAttribute" version="8.6.1" targetFramework="net462" />
+  <package id="FluentValidation.WebApi" version="8.6.1" targetFramework="net462" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net462" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net462" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net462" />
@@ -16,8 +20,8 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
